--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -1,2 +1,9 @@
-<h1> Hi From Base Template</h1>
-<h2> Hi From Base Model: {{title}}</h2>
+<!-- blog entry -->
+<h1><a href="/posts/{{id}}">{{title}}</a></h1>
+<p class="lead">by <a href="#">{{author}}</a></p>
+<hr>
+<p class="date"><span class="glyphicon glyphicon-time"></span> Posted on {{date}}</p>
+<hr>
+<img src="{{thumbnail}}" class="img-responsive">
+<hr>
+<p>{{preview}}</p>
